fix app height on mobile devices

--- a/src/style.scss
+++ b/src/style.scss
@@ -19,5 +19,5 @@ html, body {
 }
 
 #app {
-  height: 100%;
+  height: 100svh;
 }
